# diSEQt

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
diSEQt/: brseq.c  brseq.h  brseq_commands.c  main.c  rseq_parse.c  rseq_parse.h
include/: brseq.h  brseq_commands.h  common.h  midi.h  rseq_parse.h
src/: CMakeLists.txt  brseq.c  brseq_commands.c  common.c  main.c  midi.c  rseq_parse.c
